rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__context_menu_default_options_first_80x24.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                            ┌Context Menu──────────┐                            ",
        "                            │   View               │                            ",
        "                            │   Open With...       │                            ",
        "                            │   ────────────────   │                            ",
        "                            │   Copy               │                            ",
        "                            │   Move               │                            ",
        "                            │   Rename             │                            ",
        "                            │   ────────────────   │                            ",
        "                            │   Delete             │                            ",
        "                            │  [Enter] Select  [E  │                            ",
        "                            └──────────────────────┘                            ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
        "                                                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 41, y: 6, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 7, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 49, y: 7, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 7, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 8, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 8, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 9, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 9, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 10, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 10, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 11, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 11, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 12, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 12, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 13, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 29, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 31, y: 15, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 52, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
