rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__context_menu_default_options_middle_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                ┌Context Menu──────────┐                                                ",
        "                                                │   View               │                                                ",
        "                                                │   Open With...       │                                                ",
        "                                                │   ────────────────   │                                                ",
        "                                                │   Copy               │                                                ",
        "                                                │   Move               │                                                ",
        "                                                │   Rename             │                                                ",
        "                                                │   ────────────────   │                                                ",
        "                                                │   Delete             │                                                ",
        "                                                │  [Enter] Select  [E  │                                                ",
        "                                                └──────────────────────┘                                                ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 61, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 17, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 18, fg: Black, bg: White, underline: Reset, modifier: BOLD,
        x: 69, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 21, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 49, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 51, y: 23, fg: DarkGray, bg: Gray, underline: Reset, modifier: NONE,
        x: 69, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 71, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 48, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 72, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
